<resources>
    <string name="app_name">Eventos</string>
    <string name="exemplo_title">Título de exemplo</string>
    <string name="available_events">Eventos Disponíveis</string>
    <string name="error_message">Desculpe, mas algo deu errado. Vefique sua conexão com a internet =/</string>
    <string name="description">Descrição</string>
    <string name="description_example">A disgraced parole officer is indebted to a local gang leader and forced to pull off a series of dangerous drug heists within twelve hours in order to pay the $2 million dollars he owes, rescue his kidnapped pregnant wife, and settle a score with the city\'s corrupt police chief, who is working with the gang leader and double-crossed him years ago.</string>
    <string name="event_image">Imagem do evento</string>
    <string name="event_details">Detalhes do Evento</string>
    <string name="price_example">R$ 49,90</string>
    <string name="date_example">26/10/2022 13:00</string>
    <string name="check_in">Check In</string>
    <string name="e_mail">E-mail</string>
    <string name="nome">Nome</string>
    <string name="informe_seus_dados">Informe seus dados</string>
    <string name="email_nao_pode_ser_vazio">E-mail não pode ser vazio</string>
    <string name="email_invalido">E-mail inválido</string>
    <string name="nome_nao_pode_ser_vazio">Nome não pode ser vazio</string>
    <string name="check_in_title">Check In</string>
    <string name="mensagem_erro_check_in">Desculpe. Algo deu errado aqui.</string>
    <string name="check_in_confirmado">Check in confirmado!!</string>
    <string name="close">Fechar</string>
    <string name="enviando">Enviando...</string>
    <string name="mais_um_evento_pra_conta">Mais um evento pra conta</string>
    <string name="seu_check_in_foi_confirmado">Seu check-in foi confirmado!!</string>
</resources>